--- a/styles/index.css
+++ b/styles/index.css
@@ -71,6 +71,6 @@
     @apply border-border;
   }
   body {
-    @apply bg-background text-foreground bg-slate-50 text-slate-800;
+    @apply bg-background text-foreground bg-slate-50 text-slate-800 flex flex-col h-screen w-screen overflow-hidden;
   }
 }
